# museum_tour_guide_backend

./: .gitignore  README.md  langgraph.json  main.ipynb  pyproject.toml  setup.py  test.ipynb
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
data/Objectifying_China/docs/: Ben Chiesa.json  Bibliography and selected reading list.json  Bottle (yuhuchun).json  Bowl with brown glaze.json  Bowl with cranes and clouds.json  Bowl with doucai enamels.json  Bowl with parrots.json  Bowl with scrolling florals.json  Bowl with wucai enamels.json  Bowl.json  Brush pot.json  Brush washer.json  Chinese porcelain in Europe and Asia.json  Commemorative plate.json  Contents目錄.json  Covered jar.json  Covered sugar bowl.json  Cup.json  Curators 策展人.json  Dates.json  Designer 設計師.json  Edition 版次.json  Enamelled porcelain.json  Figural pair.json  Flower-shaped bowl.json  Foliate bowl with scrolling florals.json  Funerary jar.json  Guanyin figure.json  ISBN國際標準書號.json  Incense burner.json  Jar (guan ).json  Jar.json  Jardinière.json  Jarlet.json  Kendi.json  Klapmuts bowl.json  Kraak plate.json  Kraak-style plate.json  Marks.json  Milk jug.json  (+89 more)
data/tradition_to_contemporary/docs/: page_100_result_en.json  page_100_result_zh.json  page_101_result_en.json  page_101_result_zh.json  page_102_result_en.json  page_102_result_zh.json  page_103_result_en.json  (+243 more)
notebooks/: asyncio_test.ipynb  asyncio_test.py  database.ipynb  main.ipynb  setup.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: main-checkpoint.ipynb
output/Objectifying_China/: image_mappings.json
pretrained_models/tts-fastspeech2-ljspeech/: hyperparams.yaml  model.ckpt  spn_predictor.ckpt
pretrained_models/tts-hifigan-ljspeech/: generator.ckpt  hyperparams.yaml
src/: accumulator.py  bm25_encoder.json  chains.py  edges.py  graph.py  main.py  models.py  nodes.py  prompts.py  retrieval_graph.py  utils.py
src/agent/: answer_grader.py  bm25_retriever.py  graph.py  hallucination_grader.py  pinecone_retriever.py  prompts.py  query_router.py  question_rewriter.py  retrieval_grader.py  utils.py  web_search.py
src/utils/: setup.py
tests/: test_accumulator.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_query_router.py  test_utils.py
(+165 files in other folders)
